fixes to resolve the name of included images using xinclude base attributes recursively/iteratively.

--- a/XDynDocs/inst/XSL/OmegahatXSL/Todo.xsl.in
+++ b/XDynDocs/inst/XSL/OmegahatXSL/Todo.xsl.in
@@ -5,6 +5,7 @@
 		xmlns:r="http://www.r-project.org">
 
 <xsl:import href="html/shell.xsl"/>
+<xsl:import href="html/xml.xsl"/>
 
 <xsl:key name="topic" match="items/item[@topic]"
           use="concat(parent::items/parent::topic/title, @status)" />
