removed our handling of authorinfo and leave to dblatex

--- a/XDynDocs/inst/Make/Makefile.in
+++ b/XDynDocs/inst/Make/Makefile.in
@@ -22,7 +22,7 @@ ifndef DB
 endif
 
 ifndef DB_DOC_LAYOUT
-DB_DOC_LAYOUT=toc index mainmatter 
+DB_DOC_LAYOUT=toc index mainmatter coverpage
 endif
 
 ifndef DBLATEX_PARAMS
