--- a/XDynDocs/inst/XSL/OmegahatXSL/Todo.xsl.in
+++ b/XDynDocs/inst/XSL/OmegahatXSL/Todo.xsl.in
@@ -250,8 +250,9 @@
   </a>
 </xsl:template>
 
-<xsl:template name="item">
+<xsl:template name="item" match="item/item">
   <div class="todoItem">
+   <div><xsl:if test="./item"><xsl:attribute name="class">nestedItems</xsl:attribute></xsl:if>
    <xsl:element name="dt">
      <xsl:attribute name="class"><xsl:value-of select="@status"/></xsl:attribute>
     <!--   [<xsl:value-of select="position()"/>]    -->
@@ -272,6 +273,7 @@
      <xsl:apply-templates select="comment"/>
     </xsl:element>
    </xsl:if>
+   </div>
   </div>
 </xsl:template>
 
@@ -373,6 +375,10 @@
   </xsl:for-each>
    <xsl:apply-templates />
  </xsl:element>
+</xsl:template>
+
+<xsl:template match="ulink[@url and not(.//text())]">
+ <a href="{@url}"><xsl:value-of select="@url"/></a>
 </xsl:template>
 
 <xsl:template match="ulink">
